# test-renovate

./: .gitignore  .gitlab-ci.yml  LOG.txt  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json5
.github/workflows/: ci.yml
poetry/: main.py  pyproject.toml
srcA/: pyproject.toml
srcB/: pyproject.toml
uv/: pyproject.toml
