[project]
name = "test-renovate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django-cors-headers==4.2.0",
    "django-csp==3.8",
    "django==5.2.9",
    "numpy==5",
]

[dependency-groups]
dev = [
    "pandas==2.2.2",
]
