[project]
name = "test-renovate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django==5.2.13",
    "django-cors-headers==4.9.0",
    "bleach==6.2.0",
    "pandas==3.0.2",
    "pysaml2==7.5.4",
]

[tool.uv]
exclude-newer = "7 days"
